bugfix/ETSL-562 Hero Video banner alignment issues
bugfix/ETSL-562 Hero Video banner alignment issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/hero_banner.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/hero_banner.scss
@@ -23,8 +23,8 @@
       @include respond-to-min($desktop) {
         &--next,
         &--previous {
-          width: 3rem;
-          height: 3rem;
+          width: toRem(48);
+          height: toRem(48);
           align-items: center;
           justify-content: center;
           border-radius: 50%;
@@ -41,28 +41,28 @@
           &:after {
             content: "";
             position: absolute;
-            top: 0.938rem;
+            top: toRem(15);
             z-index: 11;
             display: block;
-            width: 0.688rem;
-            height: 0.688rem;
+            width: toRem(11);
+            height: toRem(11);
             border-top: 1px solid $white;
             border-left: 1px solid $white;
           }
         }
         &--previous {
           right: auto;
-          left: 2.7rem;
+          left: toRem(43);
           &:after {
-            left: 1.25rem;
+            left: toRem(20);
             top: auto;
             transform: rotate(-45deg);
           }
         }
         &--next {
-          right: 2.7rem;
+          right: toRem(43);
           &:after {
-            left: 1.063rem;
+            left: toRem(17);
             top: auto;
             transform: rotate(135deg);
           }
@@ -92,23 +92,23 @@
     }
     &__indicator {
       background-color: $light-white-grey;
-      width: 0.5rem;
-      height: 0.5rem;
+      width: toRem(8);
+      height: toRem(8);
       &--active {
         background-color: $arrow-border-green;
       }
     }
   }
   .video {
-    min-height: 34.375rem;
+    min-height: toRem(550);
     @include respond-to-min($desktop) {
       height: 100%;
-      min-height: 34.375rem;
+      min-height: toRem(550);
     }
     .video_link {
       @include respond-to-min($desktop) {
         position: absolute;
-        left: 0.625rem;
+        left: toRem(10);
         color: $white;
       }
       @include respond-to-max($desktop) {
@@ -117,23 +117,23 @@
     }
     .cover-image__with-play-icon {
       @include respond-to-min($desktop) {
-        margin-left: -0.75rem;
-        margin-right: -0.75rem;
+        margin-left: -toRem(12);
+        margin-right: -toRem(12);
       }
     }
     .video-wrapper {
       @include respond-to-min($desktop) {
-        top: 4.063rem;
-        left: 0.188rem;
+        top: toRem(65);
+        left: toRem(3);
       }
       @include respond-to-max($phone) {
         margin-bottom: $margin-step-0;
-        margin-top: 0.5rem;
+        margin-top: toRem(8);
       }
     }
     .video_cover {
       @include respond-to-min($desktop) {
-        height: 31.25rem;
+        height: toRem(500);
         position: absolute;
         left: -9999px;
         right: -9999px;
@@ -151,20 +151,20 @@
         padding: calc(#{$padding-step-5} + 10px) $padding-step-0;
       }
       @include respond-to-min($tablet) {
-        max-height: 15.625rem;
+        max-height: toRem(250);
         top: 0;
         left: 0;
         z-index: 1;
         overflow: hidden;
       }
       @include respond-to-min($desktop) {
-        max-height: 31.25rem;
-        height: 31.25rem;
+        max-height: toRem(500);
+        height: toRem(500);
       }
     }
     .youtube-popup-container {
-      top: 15.625rem;
-      left: 1.563rem;
+      top: toRem(250);
+      left: toRem(25);
       @include respond-to-min($desktop) {
         position: absolute;
         top: 0;
@@ -177,28 +177,28 @@
         left: 0;
       }
       .btn-green{
-        margin-top: 1.875rem;
-        top: 10rem;
-        width: 21.8rem;
+        margin-top: toRem(10);
+        top: toRem(150);
+        width: toRem(350);
         @include respond-to-min($tablet) {
-          margin-top: 1.5rem;
+          margin-top: toRem(0);
         }
         @include respond-to-min($desktop){
-          left: 1.125rem;
-          top: 21rem;
-          width: 11.25rem;
+          left: toRem(18);
+          top: toRem(336);
+          width: toRem(180);
           margin-top: $margin-step-0;
         }
       }
       .hero-heading-big {
-        margin-top: 0.938rem;
+        margin-top: toRem(15);
         @include respond-to-min($desktop) {
-          left: 0.813rem;
-          top: 3.75rem;
-          margin-top: 2.5rem;
+          left: toRem(15);
+          top: toRem(60);
+          margin-top: toRem(60);
         }
         @include respond-to-max($desktop) {
-          top: 1.563rem;
+          top: toRem(25);
           .text--white {
             color: $almost-black;
             @include respond-to-min($desktop) {
@@ -212,8 +212,8 @@
   .replaced-svg,
   a.video_link svg {
     @include respond-to-min($desktop){
-      top: 0.188rem;
-      left: 0.375rem;
+      top: toRem(3);
+      left: toRem(6);
       position: relative;
     }
     g g {
@@ -223,8 +223,8 @@
       @include respond-to-min($tablet) {
         stroke: $white;
         position: absolute;
-        right: -2rem;
-        top: -0.188rem;
+        right: -toRem(32);
+        top: -toRem(3);
       }
     }
     polygon {
@@ -239,7 +239,7 @@
 }
 .hero-banner-section {
   position: relative;
-  max-height: 31.25rem;
+  max-height: toRem(500);
   overflow: hidden;
   h2 {
     text-align: center;
@@ -247,7 +247,7 @@
       font-size: $font32;
       letter-spacing: normal;
       color: $white;
-      margin-bottom: 0.75rem;
+      margin-bottom: toRem(12);
     }
   }
   p {
@@ -281,7 +281,7 @@
       @include respond-to-min($desktop) {
         width: 50%;
         p {
-          top: 0.313rem;
+          top: toRem(5);
           position: relative;
           &:first-child {
             line-height: 1.6;
@@ -297,7 +297,7 @@
     }
     &__content {
       position: relative;
-      top: 3.75rem;
+      top: toRem(60);
       padding-left: calc(#{$padding-step-1} + 2px);
       width: 100%;
       left: 0;
@@ -348,16 +348,16 @@
       padding: calc(#{$padding-step-1} - 2px) calc(#{$padding-step-1} + 4px);
       border-radius: 100px;
       display: flex;
-      max-width: 21rem;
-      margin-bottom: 0.75rem;
+      max-width: toRem(336);
+      margin-bottom: toRem(12);
       background-image: linear-gradient(83deg, $bright-sun, $pumpkin);
       @include respond-to-min($tablet) {
-        margin-bottom: 1rem;
+        margin-bottom: toRem(16);
       }
       @include respond-to-min($desktop) {
         font-size: $font16;
         line-height: 24px;
-        max-width: 26.625rem;
+        max-width: toRem(426);
       }
     }
     &__action-container {
@@ -368,12 +368,12 @@
         margin-top: $margin-step-3;
       }
       @include respond-to-max($desktop) {
-        width: 97%;
+        width: 100%;
       }
       a {
-        min-width: 11.25rem;
+        min-width: toRem(180);
         width: 100%;
-        height: 3rem;
+        height: toRem(48);
         font-size: $font14;
         @include font-family-lato();
         line-height: 48px;
@@ -382,7 +382,7 @@
         text-transform: uppercase;
         transition: all 0.3s ease-in-out;
         text-align: center;
-        padding: 0.1rem;
+        padding: toRem(1.6);
         border-radius: 4px;
         border-width: 1px;
         outline: 0;
@@ -444,7 +444,7 @@
     @include respond-to-min($desktop) {
       height: 500px;
       position: relative;
-      max-height: 31.25rem;
+      max-height: toRem(500);
       overflow: hidden;
       .cmp-teaser {
         &__content {
@@ -479,8 +479,3 @@
   }
 }
 
-#prepaid_container_id {
-  .hero-banner-section .cmp-image__image {
-    height: 363px !important;
-  }
-}
